--- a/style.css
+++ b/style.css
@@ -23,41 +23,42 @@ body{
     position: absolute;
 }
 
-#taskInput, table, #addTaskBtn{
-    display: none;
-}
-
-table {
-    width: 90%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    text-align: left;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    table-layout: fixed;
-}
-
-th, td {
-    border: 1px solid #ddd;
-    padding: 12px;
-}
-
-th {
-    background-color: #f4a460;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    width: 200px;
-}
-
-td {
-    background-color: #fdf5e6;
-    text-align: center;
-    width: 150px;
-    height: 50px;
-}
-
 input, button {
     margin: 10px;
     padding: 10px;
     font-size: 14px;
+}
+
+#pet{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 50px auto;
+    width: 150px;
+    height: 150px;
+    display: none;
+}
+
+#dogPlaying{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 150px;
+    height: 150px;
+    display: none;
+    margin: 50px auto;
+}
+
+#stopPlay, #jump, #play, #feed{
+    display: none;
+}
+
+#foodPicture{
+    display: none;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    margin: 50px auto;
 }
