added table to local storage

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     position: absolute;
 }
 
-#taskInput, table, #addTaskBtn{
+#taskInput, table, #addTaskBtn, #saveBtn, #loadBtn{
     display: none;
 }
 
